# libmodbus

./: .gitignore  CMakeLists.txt  config.h.in  libmodbus.pc.in
cmake/: libmodbusConfig.cmake.in
src/: modbus-tcp.c
tests/: unit-test-client.c  unit-test-server.c
